rke2/role/deploy_app/files/oss_yaml/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-monitoring-grafana-ingress
  # namespace: cattle-monitoring-system
spec:
  rules:
  - host: "grafana.HOSTIP.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rancher-monitoring-grafana
            port:
              number: 80
  ingressClassName: nginx
